# cognet

./: .gitignore  README.md  start.sh  stop.sh
.cursor/rules/: 00-global-operating-rules.mdc  01-product-and-system-rules.mdc  02-architecture-rules.mdc  03-data-pipeline-rules.mdc  04-agent-rules.mdc  05-ranking-and-scoring-rules.mdc  06-api-and-contract-rules.mdc  07-observability-rules.mdc  08-testing-rules.mdc  09-documentation-sync-rules.mdc  10-localization-and-rtl-rules.mdc  11-review-and-validation-rules.mdc  12-governance-rules.mdc
apps/admin/: .env.production  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/api/: .env.example  .gitignore  Dockerfile  cognet_ldi.db  init_db.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
apps/api/app/core/: logging.py  settings.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/dependencies/: database.py  settings.py
apps/api/app/jobs/: README.md  celery_app.py  pipeline_tasks.py
apps/api/app/models/: __init__.py  learning.py  opportunities.py  pipeline.py  signals.py  taxonomy.py
apps/api/app/repositories/: __init__.py  opportunities_repository.py  pipeline_repository.py
apps/api/app/routes/: demand.py  discover.py  health.py  opportunities.py  pipeline.py  search.py
apps/api/app/schemas/: common.py  opportunities.py  pipeline.py
apps/api/app/services/: __init__.py  opportunity_service.py
apps/api/app/telemetry/: middleware.py
apps/api/app/tests/: conftest.py  test_health.py
docs/agents/: agent-system.md
(+100 files in other folders)
