[tool.poetry]
name = "cognet-api"
version = "0.1.0"
description = "COGNET Learning Demand Intelligence Engine — API"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
structlog = "^24.1.0"
redis = "^5.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
anthropic = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests", "../../tests"]
